--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Ef_Postgres_Db": "Server=localhost;Database=jobCards;Port=5432;User Id=postgres;Password=healin26;"
+    "Ef_Postgres_Db": "Server=localhost;Database=jobCards;Port=YOURPORT;User Id=postgres;Password=YOURPASSWORD;"
   },
   "EmailConfiguration": {
-    "From": "goktugfevziozcelik.work@gmail.com",
+    "From": "yourMail@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "goktugfevziozcelik.work@gmail.com",
-    "Password": "arjwkshxfzryzasn"
+    "Username": "yourMailk@gmail.com",
+    "Password": "yourAppPassword"
   }
 }
