--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -24,7 +27,8 @@
     "sass": "^1.62.0",
     "sweetalert2": "^11.7.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
