--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
     "react": "^18.2.0",
+    "react-date-picker": "^10.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
